# hf_ehr

./: .gitignore  LICENSE  Makefile  README.md  env.yaml  env_h100.yaml  pyproject.toml  readme_demo.py  requirements.txt  requirements_h100.txt  setup.py
hf_ehr/: config.py  utils.py
hf_ehr/configs/: README.md  config.yaml
hf_ehr/data/: README.md  calculate_ppl.py  datasets.py  datasets_new.py  datasets_old.py  tokenization.py  tokenization_new.py  tokenizers.py
hf_ehr/eval/: ehrshot.py  ehrshot_chunk.py  finetune.py  mimic_labelers.py  val_ppl.py  val_ppl.sh  val_ppl_2.py
hf_ehr/logger/: reloggers.py
hf_ehr/meds_dev/: config.py  generate_labels.py
hf_ehr/models/: base.py  based.py  bert.py  bert2.py  debugging.py  gpt.py  hyena.py  llama.py  mamba.py  mamba_ehr.py  modules.py  t5.py
hf_ehr/notebooks/: cookbook_plots.ipynb  ehrshot-plot.ipynb  ehrshot_results.ipynb  gen_dataset_stats.py  hparam_sweep.ipynb  n_gram_stats.ipynb  nlp_n_gram_counter.py  val_ppl_plots.ipynb  val_ppl_plots_gpt_rope.ipynb
hf_ehr/scripts/: README.md  bash.sh  bert-large-batch_acc=4.txt  bert-large-num_workers=4.txt  bert-large-test.txt  bert-large.txt  bert-results-full-n_workers=10.txt  create_lab_codes.py  create_lab_quartiles.py  create_numerical_quantiles.py  create_numerical_vocab.py  create_vocab.py  create_vocab_quartile.py  generate_summary_stats.py  get_numerical_codes.py  profiler.txt  profiler_report.txt  results.txt  run.py  test.py  test_checkpoints.py  transform_clmbr_tokenizer.py
hf_ehr/stats/: dataset_stats.ipynb  gen_dataset_stats.py  gen_dataset_stats.sh  (+3 more)
(+284 files in other folders)
